@@ -1,3 +1,7 @@
+2013-05-16  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* message.el (message-expand-group): Decode group names.
+
 2013-05-16  Julien Danjou  <julien@danjou.info>
 
 	* gnus-notifications.el (gnus-notifications-notify): Use photo-file as
